--- a/src/main/webapp/html/tasks.html
+++ b/src/main/webapp/html/tasks.html
@@ -5,6 +5,19 @@
     <title>Title</title>
 </head>
 <body>
-
+    <table>
+        <thead>
+            <th>id</th>
+            <th>description</th>
+            <th>status</th>
+        </thead>
+        <tbody>
+            <tr th:each="task, number : ${tasks}">
+                <td th:text="${task.id}"></td>
+                <td th:text="${task.description}" th:id="'description_'+${task.id}"></td>
+                <td th:text="${task.status}" th:id="'status_'+${task.id}"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
