--- a/src/main/webapp/html/tasks.html
+++ b/src/main/webapp/html/tasks.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="style/main.css" rel="stylesheet">
+    <script src="script/main.js"></script>
+    <script src="jquery-3.7.1.min.js"></script>
 </head>
 <body>
     <table>
@@ -17,9 +20,23 @@
             <tr th:each="task, number : ${tasks}">
                 <td th:text="${task.id}"></td>
                 <td th:text="${task.description}" th:id="'description_'+${task.id}"></td>
-                <td th:text="${task.status}" th:id="'status_'+${task.id}"></td>
+                <td span th:text="${task.status}" th:id="'status_'+${task.id}"></td>
+                <td>
+                    <button th:id="'edit_'+${task.id}" th:onclick="'edit_task('+${task.id}+')'">edit</button>
+                </td>
+                <td>
+                    <button th:id="'delete_'+${task.id}" th:onclick="'delete_task('+${task.id}+')'">delete</button>
+                </td>
             </tr>
         </tbody>
     </table>
+    <h1>
+        <button th:each="pageNumber : ${page_numbers}" class="button_page">
+            <a th:href="@{/(page=${pageNumber}, limit=10)}"
+               th:text="${pageNumber}"
+               th:classappend="${pageNumber == current_page ? 'active_page' : ''}">
+            </a>
+        </button>
+    </h1>
 </body>
 </html>
